--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-xl-6 col-sm-12 offset-xl-3">
+    <div class="col-xl-8 col-sm-12 offset-xl-2">
       <form (ngSubmit)="onSubmit(f)" #f="ngForm">
         <nz-input-group nzSearch nzSize="large" [nzAddOnAfter]="suffixButton">
           <input type="text" nz-input placeholder="Enter City Name..." ngModel name="cityName" />
@@ -10,7 +10,32 @@
         </ng-template>
       </form>
 
-      <!-- <p class="mt-4 mb-4">Showing Results for <b>{{selectedCityName | titlecase}}</b></p> -->
+      <p class="mt-4 mb-4">Showing Results for <b>{{selectedCityName | titlecase}}</b></p>
+
+      <p class="mt-4 mb-4">Updated {{ timeInterval }}</p>
+
+      <nz-table #forecastTable [nzData]="forecastNow.list" *ngIf="forecastNow">
+        <thead>
+          <tr>
+            <th>Day and Time</th>
+            <th>Min. Temprature</th>
+            <th>Max. Temprature</th>
+            <th>Cloud Situation</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of forecastTable.data">
+            <td>{{ data.dt_txt | date :'short' }}</td>
+            <td>{{ convertKelvinToCelsius(data.main.temp_min) | number:'1.0-0' }}<span>&#8451;</span></td>
+            <td>{{ convertKelvinToCelsius(data.main.temp_max) | number:'1.0-0' }}<span>&#8451;</span></td>
+            <td>{{ data.weather[0].description }} <img [src]="'http://openweathermap.org/img/wn/' + data.weather[0].icon + '@2x.png'" alt=""></td>
+          </tr>
+        </tbody>
+      </nz-table>
+
+      <nz-card nzTitle="Loading Weather Information...." *ngIf="!forecastNow">
+        <nz-skeleton [nzActive]="true" size='large'></nz-skeleton>
+      </nz-card>
     </div>
   </div>
 </div>
